<resources>
    <string name="app_name">Promotion App</string>
    <string name="createAccount_text">Welcome Create Your Account</string>
    <string name="create_accountBtn">Create Account</string>
    <string name="signup_text">Sign up</string>
    <string name="signout_text">Sign out</string>
    <string name="email_text">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_here">Login Here</string>
    <string name="login">Log in</string>
    <string name="location">Location Here</string>
    <string name="sub_location">Sub Location</string>
    <string name="latlong">64.23, 76.45</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="title">Enter shop name</string>
    <string name="category">Category</string>
    <string name="login_as">Login As</string>
    <string name="owner">Owner</string>
    <string name="create_place">Create Place</string>
    <string name="already_have_account">Already have an account.</string>
    <string name="new_user">New user?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hello_user">Hello User</string>
    <string name="create_your_shop">Create your first Shop</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Favourite Stores</string>
    <string name="store_statistics">Statistics</string>
    <string name="subscribed_user">Subscribed User</string>
    <string name="home_item">Home</string>
    <string name="settings">Settings</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="your_subscribed_stores">Your Subscribed Stores are </string>
    <string name="subscribers_text">1021 subscribers</string>
    <string name="channel_id">Notification_ID</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">Notification Channel Description</string>
    <string name="notificationMessage">Your favorite store brings favorite items for you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>